--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native": "^0.66.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slider": "^1.3.1",
     "react-table": "^7.7.0",
     "web-vitals": "^1.1.2"
   },
